--- a/lab_6/form_styles.css
+++ b/lab_6/form_styles.css
@@ -8,7 +8,8 @@ body {
   }
 form {
     margin: 0 auto;
-  width: 400px;
+  width: 50%;
+  
   
 
 }
@@ -16,7 +17,9 @@ form {
 label {
     display: inline-block;
     width: 90px;
-    text-align: right;
+    text-align: left;
+    font-family: Verdana;
+    font-size: 1em;
 }
 
 input, textarea {
@@ -61,8 +64,9 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Verdana;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 1.7em;
     text-transform: capitalize;
     flex-wrap: nowrap;
   }
