--- a/lab_6/form_styles.css
+++ b/lab_6/form_styles.css
@@ -6,13 +6,30 @@ body {
     padding: 0 10px;
     background: #eee;
   }
-form {
-    margin: 0 auto;
-  width: 50%;
-  
-  
 
-}
+  .container {
+    position: absolute;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    font-family: Helvetica, Geneva, Tahoma, sans-serif;
+  }
+
+form {
+  
+  margin: 0 auto;
+    padding: 0 50px;
+    min-height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Verdana;
+    font-size: 1em;
+    text-transform: capitalize;
+    flex-wrap: nowrap;
+  }
 
 label {
     display: inline-block;
@@ -23,15 +40,14 @@ label {
 }
 
 input, textarea {
-    /* To make sure that all text fields have the same font settings
-     By default, textareas have a monospace font */
+    
   font: 1em sans-serif;
 
-  /* Uniform text field size */
+  
   width: 300px;
   box-sizing: border-box;
 
-  /* Match form field borders */
+  
   border: 1px solid #999;
 }
 
@@ -53,6 +69,7 @@ button {
     font-family: Verdana;
     font-size: 14px;
     padding-left: 10px;
+    padding-right: 10px;
     text-decoration: none;
     text-shadow: 0px 1px 1px #cc9f52;
   }
